프로젝트관리 반복문 대체(수정필요)

--- a/runningmate/addproject/templates/addproject/newproject.html
+++ b/runningmate/addproject/templates/addproject/newproject.html
@@ -60,7 +60,7 @@
                     <input type="text" id="it3" name="body" placeholder=" 프로젝트명을 입력해주세요 ex)가치 사슬 분석"><br><br>
                     <input type="text" id="it4" name="teammate1" placeholder=" 팀원의 아이디를 입력해주세요"><br><br>
                     <input type="text" id="it5" name="teammate2" placeholder=" 팀원의 아이디를 입력해주세요"><br><br>
-                    <input type="color" id="it6" value="#50CFBC"><br><br>
+                    <input type="color" id="project_color" value="#50CFBC"><br><br>
                 </div>
             </div>
             <div id="btn">
