0708 프로젝트관리 views.py 수정

--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -178,29 +178,29 @@
         </div>
         <div class = "item" id = "project">
             <div class="scroll--element" id = "subject1">
-                <h6>{{addproject.project.startday.0}} {{addproject.project.endday.0}}</h6>
-                <h2>{{addproject.project.title.0}}</h2>
-                <h3>{{addproject.project.body.0}}</h3>
+                <h6>{{project.0.startday}} {{project.0.endday}}</h6>
+                <h2>{{project.0.title}}</h2>
+                <h3>{{project.0.body}</h3>
             </div>
             <div class="scroll--element" id= "subject2">
-                <h6>{{addproject.project.startday.1}} {{addproject.project.endday.1}}</h6>
-                <h2>{{addproject.project.title.1}}</h2>
-                <h3>{{addproject.project.body.1}}</h3>
+                <h6>{{project.1.startday}} {{project.1.endday}}</h6>
+                <h2>{{project.1.title}}</h2>
+                <h3>{{project.1.body}</h3>
             </div>
             <div class="scroll--element" id = "subject3">
-                <h6>{{addproject.project.startday.2}} {{addproject.project.endday.2}}</h6>
-                <h2>{{addproject.project.title.2}}</h2>
-                <h3>{{addproject.project.body.2}}</h3>
+                <h6>{{project.2.startday}} {{project.2.endday}}</h6>
+                <h2>{{project.2.title}}</h2>
+                <h3>{{project.2.body}</h3>
             </div>
             <div class="scroll--element" id = "subject4">
-                <h6>{{addproject.project.startday.3}} {{addproject.project.endday.3}}</h6>
-                <h2>{{addproject.project.title.3}}</h2>
-                <h3>{{addproject.project.body.3}}</h3>
+                <h6>{{project.3.startday}} {{project.3.endday}}</h6>
+                <h2>{{project.3.title}}</h2>
+                <h3>{{project.3.body}</h3>
             </div>
             <div class="scroll--element" id = "subject5">
-                <h6>{{addproject.project.startday.4}} {{addproject.project.endday.4}}</h6>
-                <h2>{{addproject.project.title.4}}</h2>
-                <h3>{{addproject.project.title.4}}</h3>
+                <h6>{{project.4.startday}} {{project.4.endday}}</h6>
+                <h2>{{project.4.title}}</h2>
+                <h3>{{project.4.body}</h3>
             </div>
         </div> -->
         <div class = "item" id = "project">
