--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -82,17 +82,10 @@
             </div>
             <script src="{% static 'js/calendar.js'%}"></script>
         </div>
-        {% if calendar.count == 0 %}
         <div class = "item" id = "schedule_1">
-            
-           
-        </div>
-        <div class = "item" id = "schedule_2">
-            
-        </div>
-
-        {% elif calendar.count == 1 %}
-            <div class = "item" id = "schedule_1">
+            {% if calendar.count == 0 %}
+                <div id = 'no_schedule'>아직 등록된 일정이 없어요</div>
+            {% else %} 
                 <div id = "sch1">
                     <section id = "cal_title" style="color: {{calendar.0.color}}; ">{{calendar.0.title}}</section>
                     <section id = "cal_body">{{calendar.0.body}}</section>
@@ -106,46 +99,29 @@
                     <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "friend5"></div>
                     <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "friend6"></div>
                 </div>
-            </div>
-            
-            <div class = "item" id = "schedule_2">
-            
-            </div>
-        
-        {% else %}
-        <div class = "item" id = "schedule_1">
-            <div id = "sch1">
-                <section id = "cal_title" style="color: {{calendar.0.color}}; ">{{calendar.0.title}}</section>
-                <section id = "cal_body">{{calendar.0.body}}</section>
-                <section id = "cal_time_place">{{calendar.0.starttime}}~{{calendar.0.endtime}} / {{calendar.0.place}}</section>
-            </div>
-            <div id = "sch2_team">
-                <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "friend1" ></div>
-                <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "friend2"></div>
-                <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "friend3"></div>
-                <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "friend4"></div>
-                <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "friend5"></div>
-                <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "friend6"></div>
-            </div>
+            {% endif %}
         </div>
-        
         <div class = "item" id = "schedule_2">
-            <div id = "sch2">
-                <section id = "cal_title2" style="color: {{calendar.1.color}}; ">{{calendar.1.title}}</section>
-                <section id = "cal_body2">{{calendar.1.body}}</section>
-                <section id = "cal_time_place2">{{calendar.1.starttime}}~{{calendar.1.endtime}} / {{calendar.1.place}}</section>
-            </div>
-            <div id = "sch2_team">
-                <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend1" ></div>
-                <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend2"></div>
-                <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend3"></div>
-                <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend4"></div>
-                <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend5"></div>
-                <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend6"></div>
-            </div>
-
+            {% if calendar.count == 0 %}
+                <div id = 'no_schedule'>아직 등록된 일정이 없어요</div>
+            {% elif calendar.count == 1 %}
+                <div id = 'no_schedule'>아직 등록된 일정이 없어요</div>
+            {% else %} 
+                <div id = "sch2">
+                    <section id = "cal_title2" style="color: {{calendar.1.color}}; ">{{calendar.1.title}}</section>
+                    <section id = "cal_body2">{{calendar.1.body}}</section>
+                    <section id = "cal_time_place2">{{calendar.1.starttime}}~{{calendar.1.endtime}} / {{calendar.1.place}}</section>
+                </div>
+                <div id = "sch2_team">
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend1" ></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend2"></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend3"></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend4"></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend5"></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend6"></div>
+                </div>
+            {% endif %}
         </div>
-        {% endif %}
 
 
         <div class = "item" id = "runningmate_text">러닝메이트</div>
@@ -202,7 +178,7 @@
                 <h2>{{project.4.title}}</h2>
                 <h3>{{project.4.body}</h3>
             </div>
-        </div> -->
+        </div> 
         <div class = "item" id = "project">
 
         <!--{% for project in projects %}
