0708 미모지 배경 색도 변하게 변경

--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -92,12 +92,12 @@
                     <section id = "cal_time_place">{{calendar.0.starttime}}~{{calendar.0.endtime}} / {{calendar.0.place}}</section>
                 </div>
                 <div id = "sch2_team">
-                    <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "friend1" ></div>
-                    <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "friend2"></div>
-                    <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "friend3"></div>
-                    <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "friend4"></div>
-                    <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "friend5"></div>
-                    <div class = "cal_friend" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "friend6"></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "sch1_team1" ></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "sch1_team2"></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "sch1_team3"></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "sch1_team4"></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "sch1_team5"></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.0.color}};" id = "sch1_team6"></div>
                 </div>
             {% endif %}
         </div>
@@ -113,12 +113,12 @@
                     <section id = "cal_time_place2">{{calendar.1.starttime}}~{{calendar.1.endtime}} / {{calendar.1.place}}</section>
                 </div>
                 <div id = "sch2_team">
-                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend1" ></div>
-                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend2"></div>
-                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend3"></div>
-                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend4"></div>
-                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend5"></div>
-                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "friend6"></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "sch2_team1" ></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "sch2_team2"></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "sch2_team3"></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "sch2_team4"></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "sch2_team5"></div>
+                    <div class = "cal_friend2" style="border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block; background-color: {{calendar.1.color}};" id = "sch2_team6"></div>
                 </div>
             {% endif %}
         </div>
