--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -77,7 +77,7 @@
         </ul>
 
         <ul class="chart-bars">
-          <li data-duration="tue½-thu" data-color="#50cfbc">주제선정</li>
+          <li data-duration="tue½-thu" data-color="#50cfbc">{{calendar.0.body}}</li>
           <li data-duration="mon-wed" data-color="#fe7782">팀 빌딩</li>
           <!-- <li data-duration="thu½-fri" data-color="#fe7782">가입 선정</li> -->
           <li data-duration="thu-sun" data-color="#45bfff">기업의 커뮤니케이션 우수 사례 조사</li>
@@ -140,7 +140,15 @@
       >
     </div>
 
-    <div class="item2" id="today_date"></div>
+    <div class="item2" id="today_date">
+      <div id="today">
+        <script>
+          date = new Date();
+          day = date.getDate();
+          document.getElementById("today").innerHTML = day;
+        </script>
+      </div>
+    </div>
 
     <!-- 디데이 -->
     <div class="item2" id="dday1">
