--- a/runningmate/runningmate/static/css/style.css
+++ b/runningmate/runningmate/static/css/style.css
@@ -521,15 +521,21 @@ span{
     color: #8F9BB3;s
 }
 
-.cal_friend1, .cal_friend2{
-    border-radius: 50%; width: 25px;height: 25px; margin-top:50px; display: inline-block;
+.cal_friend1, .cal_friend2 {
+    border-radius: 50%; 
+    width: 25px;
+    height: 25px;
+    margin-top: 50px;
+    display: inline-block;
 }
+
 #sch1_team1, #sch2_team1{
     background-image: url(../images/memoji.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
+
 #sch1_team2, #sch2_team2{
     background-image: url(../images/memoji2.png);
     background-size: contain;
