0708 캘린더 페이지 일정 오류 해결

--- a/runningmate/runningmate/static/css/calender.css
+++ b/runningmate/runningmate/static/css/calender.css
@@ -257,3 +257,13 @@ table {
     line-height: 30px;
     margin-left: 8px;
 }
+
+/* 캘린더 일정 */
+#cal_sch1{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    float: left;
+    width: 55%;
+}
