프로젝트 관리 기간 data-placeholer 추가

--- a/runningmate/addproject/templates/addproject/newproject.html
+++ b/runningmate/addproject/templates/addproject/newproject.html
@@ -55,9 +55,9 @@
                 </div>
 
                 <div class="content_input">
-                    <input type="date" name="startday" id="it1" placeholder=" 시작일">~<input type="date" name="endday" id="it1" placeholder=" 종료일"><br><br>
-                    <input type="text" id="it2" name="title" placeholder=" 과목명을 입력해주세요  ex)경영학원론"><br><br>
-                    <input type="text" id="it3" name="body" placeholder=" 프로젝트명을 입력해주세요  ex)가치 사슬 분석"><br><br>
+                    <input type="date" name="startday" id="it1" data-placeholer=" 시작일" required aria-required="true">~<input type="date" name="endday" id="it1" data-placeholer=" 종료일" required aria-required="true"><br><br>
+                    <input type="text" id="it2" name="title" placeholder=" 과목명을 입력해주세요  ex) 경영학원론"><br><br>
+                    <input type="text" id="it3" name="body" placeholder=" 프로젝트명을 입력해주세요  ex) 가치 사슬 분석"><br><br>
                     <input type="text" id="it4" name="teammate1" placeholder=" 팀원의 아이디를 입력해주세요"><br><br>
                     <input type="text" id="it5" name="teammate2" placeholder=" 팀원의 아이디를 입력해주세요"><br><br>
                     <button id="btn_1" onclick=""><input type="color" id="pj_color1" value="#fe7782" onclick=""></button>
