--- a/runningmate/runningmate/static/css/newproject.css
+++ b/runningmate/runningmate/static/css/newproject.css
@@ -70,8 +70,7 @@
 .project_content {
     display: flex;
     flex-direction: row;
-    margin-left: 500px;
-
+    justify-content: center;
 }
 
 .content_input {
@@ -88,14 +87,26 @@
 }
 
 #it1 {
-    width: 165px;
+    width: 174px;
     height: 30px;
     border: 0.5px solid #8f9bb3;
     border-radius: 5px;
 }
 
+input[type="date"]::before {
+    content: attr(data-placeholer);
+    width: 100%;
+    opacity: 70%;
+    margin-left: 3%;
+}
+
+input[type="date"]:focus::before,
+input[type="date"]:valid::before {
+    display: none;
+}
+
 #it2, #it3, #it4, #it5 {
-    width: 341px;
+    width: 360px;
     height: 30px;
     border: 0.5px solid #8f9bb3;
     border-radius: 5px;
@@ -131,7 +142,7 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 #btn button{
-    width: 495px;
+    width: 510px;
     font-family: "AppleSDGothicNeoM";
     background-color: #735BF2;
     color: white;
@@ -141,5 +152,4 @@ input[type="color"]::-webkit-color-swatch {
     cursor: pointer;
     font-size: 18px;
     margin-top: 3%;
-    margin-left: 1%;
 }
