--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -306,7 +306,7 @@
   </div>
 
 <script>
-  // css링크 연결 불가 현상, 코드 간소화 실패로 임시 처리
+  // 코드 간소화 실패로 임시 처리
   document.getElementById("cb1").addEventListener("click", function () {
     document.getElementById("marg_text1").classList.toggle("dec_show");
   });
