배경색 및 rec3 배경색 변경, checklist item2 배경 추가

--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -307,19 +307,21 @@
             </tr>
         </table>
     </div> -->
-    {% for calendar in calendars %}
-    {{calendar.title}}
-          {% for schedules in schedules_list %}
-          {% for schedule in schedules %}
-          {% if schedule.title == calendar.title %}
-          {{calendar.body}}
-          {% endif %}
-          {% endfor %}
-          {% endfor %}
-          {% endfor %}
-    <!-- 리스트에 담긴걸 포문 두개로 나눠서 투두 하나씩 불러와서 if문으로 
-    불러온 하나의 투두랑 연결된 하나의 프로젝트가
-    투두모델에서 외래  -->
+      <div class="item2">
+        {% for calendar in calendars %}
+        {{calendar.title}}
+            {% for schedules in schedules_list %}
+            {% for schedule in schedules %}
+            {% if schedule.title == calendar.title %}
+            {{calendar.body}}
+            {% endif %}
+            {% endfor %}
+            {% endfor %}
+            {% endfor %}
+      <!-- 리스트에 담긴걸 포문 두개로 나눠서 투두 하나씩 불러와서 if문으로 
+      불러온 하나의 투두랑 연결된 하나의 프로젝트가
+      투두모델에서 외래  -->
+      </div>
     </div>
   </div>
 
