--- a/runningmate/runningmate/static/css/style.css
+++ b/runningmate/runningmate/static/css/style.css
@@ -152,12 +152,12 @@
     left: 17%;
     top: 4%;
     bottom: 4%;
-    background: #F8F9FF;
+    background: #ebefff;
     border-radius: 30px;
 }
 
 body{
-    background: #ECF0FF;
+    background: #d5ddff;
 }
 
 
