--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -155,9 +155,9 @@
         </div>
         <div class = "item" id = "project">
             <div class="scroll--element" id = "subject1">
-                <h6>{{project.0.startday}} {{project.0.endday}}</h6>
-                <h2>{{project.0.title}}</h2>
-                <h3>{{project.0.body}</h3>
+                <h6>{{project.startday}} {{project.endday}}</h6>
+                <h2>{{project.title}}</h2>
+                <h3>{{project.body}</h3>
             </div>
             <div class="scroll--element" id= "subject2">
                 <h6>{{project.1.startday}} {{project.1.endday}}</h6>
@@ -180,7 +180,7 @@
                 <h3>{{project.4.body}</h3>
             </div>
         </div> 
-        <div class = "item" id = "project">
+        <div class = "item" id = "project"> -->
 
         <!--{% for project in projects %}
             <div class = "item" id = "project">
