--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -155,29 +155,29 @@
         </div>
         <div class = "item" id = "project">
             <div class="scroll--element" id = "subject1">
-                <h6>{{project.startday}} {{project.endday}}</h6>
-                <h2>{{project.title}}</h2>
-                <h3>{{project.body}</h3>
+                <h6>{{ project.startday }} {{ project.endday }}</h6>
+                <h2>{{ project.title }}</h2>
+                <h3>{{ project.body }}</h3>
             </div>
             <div class="scroll--element" id= "subject2">
-                <h6>{{project.1.startday}} {{project.1.endday}}</h6>
-                <h2>{{project.1.title}}</h2>
-                <h3>{{project.1.body}</h3>
+                <h6>{{ project.1.startday }} {{ project.1.endday }}</h6>
+                <h2>{{ project.1.title }}</h2>
+                <h3>{{ project.1.body }}</h3>
             </div>
             <div class="scroll--element" id = "subject3">
-                <h6>{{project.2.startday}} {{project.2.endday}}</h6>
-                <h2>{{project.2.title}}</h2>
-                <h3>{{project.2.body}</h3>
+                <h6>{{ project.2.startday }} {{ project.2.endday }}</h6>
+                <h2>{{ project.2.title }}</h2>
+                <h3>{{ project.2.body }}</h3>
             </div>
             <div class="scroll--element" id = "subject4">
-                <h6>{{project.3.startday}} {{project.3.endday}}</h6>
-                <h2>{{project.3.title}}</h2>
-                <h3>{{project.3.body}</h3>
+                <h6>{{ project.3.startday }} {{ project.3.endday }}</h6>
+                <h2>{{ project.3.title }}</h2>
+                <h3>{{ project.3.body }}</h3>
             </div>
             <div class="scroll--element" id = "subject5">
-                <h6>{{project.4.startday}} {{project.4.endday}}</h6>
-                <h2>{{project.4.title}}</h2>
-                <h3>{{project.4.body}</h3>
+                <h6>{{ project.4.startday }} {{ project.4.endday }}</h6>
+                <h2>{{ project.4.title }}</h2>
+                <h3>{{ project.4.body }}</h3>
             </div>
         </div> 
         <div class = "item" id = "project"> -->
