--- a/runningmate/runningmate/static/css/newproject.css
+++ b/runningmate/runningmate/static/css/newproject.css
@@ -71,6 +71,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    height: 45vh;
+    overflow-y: scroll;
+    
 }
 
 .content_input {
@@ -133,6 +136,11 @@ input[type="color"]::-webkit-color-swatch {
     background: none;
     border: none;
     cursor: pointer;
+}
+
+#color_select {
+    margin-top: 1%;
+    margin-left: -2%;
 }
 
 /* 프로젝트 관리 버튼 -------------------------------*/
