--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -313,22 +313,27 @@
           <div class="calendar_title" style="color: {{calendar.color}};">
             {{calendar.title}}
           </div>
+          {% for schedules in schedules_list %}
+          {% for schedule in schedules %}
+          
           <div class="calendar_content">
+            {% if schedule.title == calendar.title %}
             <div class="calendar_cb">
               <input type="checkbox" class="cb" id="cb3" style="color: {{calendar.color}};">
             </div>
             <div class="calendar_body">
-              {% for schedules in schedules_list %}
-              {% for schedule in schedules %}
-              {% if schedule.title == calendar.title %}
-              <span id="marg_text">{{calendar.body}}</span>
+              <span id="marg_text">{{calendar.body}}
               {% endif %}
               {% endfor %}
-              {% endfor %}
-              {% endfor %}
+              </span>
             </div>
+            {% endfor %}
+            
           </div>
+          
         </section>
+
+        {% endfor %}
       <!-- 리스트에 담긴걸 포문 두개로 나눠서 투두 하나씩 불러와서 if문으로 
       불러온 하나의 투두랑 연결된 하나의 프로젝트가
       투두모델에서 외래  -->
