--- a/runningmate/runningmate/static/css/calender.css
+++ b/runningmate/runningmate/static/css/calender.css
@@ -205,17 +205,10 @@ table {
 }
 
 /* 투데이 - 디데이 */
-#dday1{
-    background-color: #50CFBC;
+#dday1, #dday2, #dday3{
+    background-color: white
 }
 
-#dday2{
-    background-color: #45BFFF;
-}
-
-#dday3{
-    background-color:  #FFBC54;
-}
 
 .subject_name{
     font-family: 'AppleSDGothicNeoM';
@@ -280,4 +273,16 @@ table {
     justify-content:center;
     float: left;
     width: 55%;
+}
+
+
+#no_dday{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    font-family: AppleSDGothicNeoM;
+    color: #5D7285;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
 }
