--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -310,7 +310,7 @@
               <input type="checkbox" class="cb" id="cb3" style="color: {{calendar.color}};">
             </div>
             <div class="calendar_body">
-              <span id="marg_text">{{calendar.body}}</span>
+              <span id="marg_text">{{schedule.body}}</span>
             </div>
           </div>
           {% endif %}
