--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -313,27 +313,28 @@
         </table>
     </div> -->
       <div class="item2">
-        <section class="calendar_wrap">
-          {% for calendar in calendars %}
-          <div class="calendar_title">
-            {{calendar.title}}
-          </div>
-          <div class="calendar_content">
+        
+        {% for calendar in calendars %}
+        <section class="calendar_wrap" style="width:100% ;">
+          <div id = "checkbox_title"style="color:{{calendar.color}}; float:left; width:35%">{{calendar.title}}</div>
+          <div class="calendar_content" style="float:right; width:65%">
             <div class="calendar_cb">
               <input type="checkbox" class="cb" id="cb3">
             </div>
+
             <div class="calendar_body">
               {% for schedules in schedules_list %}
-              {% for schedule in schedules %}
-              {% if schedule.title == calendar.title %}
-              <span id="marg_text">{{calendar.body}}</span>
-              {% endif %}
+                {% for schedule in schedules %}
+                  {% if schedule.title == calendar.title %}
+                    <span id="marg_text" style="width:100% ;">{{calendar.body}}</span>
+                  {% endif %}
+                {% endfor %}
               {% endfor %}
-              {% endfor %}
-              {% endfor %}
+              
             </div>
           </div>
         </section>
+      {% endfor %}
       <!-- 리스트에 담긴걸 포문 두개로 나눠서 투두 하나씩 불러와서 if문으로 
       불러온 하나의 투두랑 연결된 하나의 프로젝트가
       투두모델에서 외래  -->
